* Java 19. * Remove lombok dependency for bug using lates versions of java fix typos caused by this. * Add README.md for java 19. * Show-case record pattern.