@@ -3,7 +3,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.1.RELEASE'
 }
 
-group 'org.example'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21) // Ensure you're targeting the correct Java version
+    }
+}
+
+group 'java.examples'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -11,8 +17,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.22'
     implementation 'org.json:json:20231013'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
